cargo-features = ["test-dummy-unstable"]

[package]
name = "rust-data-structures"
version = "0.1.0"
edition = "2021"
im-a-teapot = true  # This is a new option enabled by test-dummy-unstable.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
